meja/tests/try-type-mismatch.stderr
File "tests/try-type-mismatch.meja", line 9, characters 20-21:
Error: Incompatible types unit and bool:
       Cannot unify unit and bool
