meja/tests/try-type-mismatch.meja
let x = fun (b) => {
  try ({
    if (b) {
      ();
    } else {
      failwith("");
    };
  }) {
    | Failure(_) => b
  };
};
